{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 470,
  "lineage": "727b8dc3-04c8-9c38-07fc-38e8238d7fc7",
  "resources": [
    {
      "module": "module.bastion_host",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ninja_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b8323d51e0d7eff5",
            "arn": "arn:aws:ec2:ap-south-1:313578065517:instance/i-0981ed2a1be691fc7",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0981ed2a1be691fc7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "gone-servers",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03d664c67b40dc403",
            "private_dns": "ip-10-0-0-48.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0abc7cfde29699729",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e83685bd1e98c8d4",
            "tags": {
              "Name": "batian-host"
            },
            "tags_all": {
              "Name": "batian-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-019d637653ea70b21"
            ]
          },
          "dependencies": [
            "module.ninja_public_subnet.aws_subnet.ninja_subnet",
            "module.ninja_vpc.aws_vpc.ninja_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_ip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ninja_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09fe022b75f18ce33",
            "association_id": "eipassoc-0a45fdd16ef13fea6",
            "domain": "vpc",
            "id": "eipalloc-09fe022b75f18ce33",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0047e5b9e23bbe6bf",
            "private_dns": "ip-10-0-0-68.ap-south-1.compute.internal",
            "private_ip": "10.0.0.68",
            "public_dns": "ec2-65-0-189-163.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.189.163",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ninja_igtw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ninja_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:313578065517:internet-gateway/igw-0c63ded6954e7d12e",
            "id": "igw-0c63ded6954e7d12e",
            "owner_id": "313578065517",
            "tags": {
              "Name": "ninja-igw"
            },
            "tags_all": {
              "Name": "ninja-igw"
            },
            "vpc_id": "vpc-0b1cb65c9dbbe9665"
          },
          "dependencies": [
            "module.ninja_vpc.aws_vpc.ninja_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ninja_nat_gtw",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ninja_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09fe022b75f18ce33",
            "association_id": "eipassoc-0a45fdd16ef13fea6",
            "connectivity_type": "public",
            "id": "nat-09f5fb66d03f80db1",
            "network_interface_id": "eni-0047e5b9e23bbe6bf",
            "private_ip": "10.0.0.68",
            "public_ip": "65.0.189.163",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e83685bd1e98c8d4"
          },
          "dependencies": [
            "module.elastic_ip.aws_eip.ninja_eip",
            "module.ninja_public_subnet.aws_subnet.ninja_subnet",
            "module.ninja_vpc.aws_vpc.ninja_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ninja_private_route",
      "mode": "managed",
      "type": "aws_route",
      "name": "subnet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0182fa555b34056241080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09f5fb66d03f80db1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0182fa555b3405624",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elastic_ip.aws_eip.ninja_eip",
            "module.ninja_nat_gtw.aws_nat_gateway.ninja_nat_gateway",
            "module.ninja_private_rt.aws_route_table.ninja_rt",
            "module.ninja_public_subnet.aws_subnet.ninja_subnet",
            "module.ninja_vpc.aws_vpc.ninja_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ninja_private_rt",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ninja_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:313578065517:route-table/rtb-0182fa555b3405624",
            "id": "rtb-0182fa555b3405624",
            "owner_id": "313578065517",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09f5fb66d03f80db1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1cb65c9dbbe9665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ninja_vpc.aws_vpc.ninja_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ninja_private_rt_association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055e123fcf6cc5183",
            "route_table_id": "rtb-0182fa555b3405624",
            "subnet_id": "subnet-0f17855e33138f29b"
          },
          "dependencies": [
            "module.ninja_private_rt.aws_route_table.ninja_rt",
            "module.ninja_private_subnet.aws_subnet.ninja_subnet",
            "module.ninja_vpc.aws_vpc.ninja_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4944700b5d659d8",
            "route_table_id": "rtb-0182fa555b3405624",
            "subnet_id": "subnet-0e16112c961e162a6"
          },
          "dependencies": [
            "module.ninja_private_rt.aws_route_table.ninja_rt",
            "module.ninja_private_subnet.aws_subnet.ninja_subnet",
            "module.ninja_vpc.aws_vpc.ninja_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ninja_private_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ninja_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:313578065517:subnet/subnet-0f17855e33138f29b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f17855e33138f29b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "313578065517",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ninja-private-sub-01"
            },
            "tags_all": {
              "Name": "ninja-private-sub-01"
            },
            "vpc_id": "vpc-0b1cb65c9dbbe9665"
          },
          "dependencies": [
            "module.ninja_vpc.aws_vpc.ninja_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:313578065517:subnet/subnet-0e16112c961e162a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e16112c961e162a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "313578065517",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ninja-private-sub-02"
            },
            "tags_all": {
              "Name": "ninja-private-sub-02"
            },
            "vpc_id": "vpc-0b1cb65c9dbbe9665"
          },
          "dependencies": [
            "module.ninja_vpc.aws_vpc.ninja_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ninja_public_route",
      "mode": "managed",
      "type": "aws_route",
      "name": "subnet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c63ded6954e7d12e",
            "id": "r-rtb-07c8e41ab3e5e91351080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07c8e41ab3e5e9135",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ninja_igtw.aws_internet_gateway.ninja_igw",
            "module.ninja_public_rt.aws_route_table.ninja_rt",
            "module.ninja_vpc.aws_vpc.ninja_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ninja_public_rt",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ninja_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:313578065517:route-table/rtb-07c8e41ab3e5e9135",
            "id": "rtb-07c8e41ab3e5e9135",
            "owner_id": "313578065517",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c63ded6954e7d12e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1cb65c9dbbe9665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ninja_vpc.aws_vpc.ninja_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ninja_public_rt_association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050b3d7c44671bc79",
            "route_table_id": "rtb-07c8e41ab3e5e9135",
            "subnet_id": "subnet-0e83685bd1e98c8d4"
          },
          "dependencies": [
            "module.ninja_public_rt.aws_route_table.ninja_rt",
            "module.ninja_public_subnet.aws_subnet.ninja_subnet",
            "module.ninja_vpc.aws_vpc.ninja_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032a8bdd8ee414a09",
            "route_table_id": "rtb-07c8e41ab3e5e9135",
            "subnet_id": "subnet-0e6209d706d949bc3"
          },
          "dependencies": [
            "module.ninja_public_rt.aws_route_table.ninja_rt",
            "module.ninja_public_subnet.aws_subnet.ninja_subnet",
            "module.ninja_vpc.aws_vpc.ninja_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ninja_public_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ninja_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:313578065517:subnet/subnet-0e83685bd1e98c8d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e83685bd1e98c8d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "313578065517",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ninja-pub-sub-01"
            },
            "tags_all": {
              "Name": "ninja-pub-sub-01"
            },
            "vpc_id": "vpc-0b1cb65c9dbbe9665"
          },
          "dependencies": [
            "module.ninja_vpc.aws_vpc.ninja_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:313578065517:subnet/subnet-0e6209d706d949bc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6209d706d949bc3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "313578065517",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ninja-pub-sub-02"
            },
            "tags_all": {
              "Name": "ninja-pub-sub-02"
            },
            "vpc_id": "vpc-0b1cb65c9dbbe9665"
          },
          "dependencies": [
            "module.ninja_vpc.aws_vpc.ninja_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ninja_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ninja_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:313578065517:vpc/vpc-0b1cb65c9dbbe9665",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f8870fd1f6034fa2",
            "default_route_table_id": "rtb-06675af9e7f42685a",
            "default_security_group_id": "sg-019d637653ea70b21",
            "dhcp_options_id": "dopt-064bc029d18f6fb35",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b1cb65c9dbbe9665",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06675af9e7f42685a",
            "owner_id": "313578065517",
            "tags": {
              "Name": "ninja-vpc-01"
            },
            "tags_all": {
              "Name": "ninja-vpc-01"
            }
          }
        }
      ]
    }
  ]
}